SERVER-50828 Coverity analysis defect 112053: Unchecked return value